--- a/src/GUI/HomePage.fxml
+++ b/src/GUI/HomePage.fxml
@@ -9,12 +9,20 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #00bfff;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.Controller">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #00ffbf;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.HomePageController">
+
     <MenuBar id="menubar" prefHeight="25.0" prefWidth="600.0" style="-fx-background-color: #ffffff;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <Menu mnemonicParsing="false" text="File">
-            <MenuItem fx:id="generateKey" mnemonicParsing="false" onAction="#genKeyAction" text="Generate Key" />
-            <MenuItem fx:id="showKey" mnemonicParsing="false" onAction="#showKeyAction" text="Show key" />
-            <MenuItem fx:id="setKey" mnemonicParsing="false" onAction="#setKeyAction" text="Set Key" />
+            <MenuItem fx:id="homePage" mnemonicParsing="false" text="Home page" />
+            <MenuItem fx:id="textEncryptionPage" mnemonicParsing="false" onAction="#textEncryptionAction" text="Text encryption" />
+            <MenuItem fx:id="fileEncryptionPage" mnemonicParsing="false" onAction="#fileEncryptionAction" text="File encryption" />
+        </Menu>
+        <Menu mnemonicParsing="false" text="Options">
+            <items>
+                <MenuItem fx:id="generateKey" mnemonicParsing="false" onAction="#genKeyAction" text="Generate Key" />
+                <MenuItem fx:id="showKey" mnemonicParsing="false" onAction="#showKeyAction" text="Show key" />
+                <MenuItem fx:id="setKey" mnemonicParsing="false" onAction="#setKeyAction" text="Set Key" />
+            </items>
         </Menu>
         <Menu mnemonicParsing="false" text="Ciphers">
             <RadioMenuItem fx:id="AES_radio" mnemonicParsing="false" onAction="#AES_radioAction" text="AES" />
@@ -27,18 +35,19 @@
     </MenuBar>
     <Text layoutX="137.0" layoutY="150.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome to the SimpleJavaCrypter!" textAlignment="CENTER" wrappingWidth="326.13671875">
         <font>
-          <Font name="Tahoma" size="34.0" />
+            <Font name="Tahoma" size="34.0" />
         </font>
     </Text>
-    <Button fx:id="buttonTextEncryption" layoutX="137.0" layoutY="236.0" mnemonicParsing="false" onAction="#setButtonTextEncryptionAction" prefHeight="25.0" prefWidth="155.0" text="Text encryption">
+    <Button fx:id="buttonTextEncryption" layoutX="137.0" layoutY="236.0" mnemonicParsing="false" onAction="#textEncryptionAction" prefHeight="25.0" prefWidth="155.0" text="Text encryption">
         <font>
-          <Font name="Tahoma Bold" size="12.0" />
+            <Font name="Tahoma Bold" size="12.0" />
         </font>
     </Button>
-    <Button id="buttonFileEncryption" fx:id="buttonFileEncryption" layoutX="308.0" layoutY="236.0" mnemonicParsing="false" onAction="#setButtonFileEncryptionAction" prefHeight="25.0" prefWidth="155.0" text="File encryption">
+    <Button id="buttonFileEncryption" fx:id="buttonFileEncryption" layoutX="308.0" layoutY="236.0" mnemonicParsing="false" onAction="#fileEncryptionAction" prefHeight="25.0" prefWidth="155.0" text="File encryption">
         <font>
-          <Font name="Tahoma Bold" size="12.0" />
+            <Font name="Tahoma Bold" size="12.0" />
         </font>
     </Button>
     <Text layoutX="198.0" layoutY="391.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Author MasterFlomaster1" textAlignment="CENTER" wrappingWidth="204.13671875" AnchorPane.bottomAnchor="5.0" />
+
 </AnchorPane>
