--- a/src/GUI/AboutPage.fxml
+++ b/src/GUI/AboutPage.fxml
@@ -19,6 +19,7 @@
             <MenuItem fx:id="homePage" onAction="#homePageAction" mnemonicParsing="false" text="Home page" />
             <MenuItem fx:id="textEncryptionPage" onAction="#textEncryptionPageAction" mnemonicParsing="false" text="Text encryption" />
             <MenuItem fx:id="fileEncryptionPage" onAction="#fileEncryptionPageAction" mnemonicParsing="false" text="File encryption" />
+            <MenuItem mnemonicParsing="false" onAction="#settingsAction" text="Settings" />
         </Menu>
         <Menu mnemonicParsing="false" text="Options">
             <MenuItem fx:id="generateKey" mnemonicParsing="false" onAction="#genKeyAction" text="Generate Key"/>
