--- a/src/GUI/MenuBar.fxml
+++ b/src/GUI/MenuBar.fxml
@@ -3,20 +3,19 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
-
 <?import javafx.scene.control.RadioMenuItem?>
-<MenuBar xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1"
-         style="-fx-background-color: #ffffff;" fx:controller="GUI.MenuBarController">
+
+<MenuBar fx:id="menuBar" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.MenuBarController">
     <Menu mnemonicParsing="false" text="File">
-        <MenuItem fx:id="homePage" onAction="#homePageAction" mnemonicParsing="false" text="Home page" />
-        <MenuItem fx:id="textEncryptionPage" onAction="#textEncryptionPageAction" mnemonicParsing="false" text="Text encryption" />
-        <MenuItem fx:id="fileEncryptionPage" onAction="#fileEncryptionPageAction" mnemonicParsing="false" text="File encryption" />
+        <MenuItem fx:id="homePage" mnemonicParsing="false" onAction="#homePageAction" text="Home page" />
+        <MenuItem fx:id="textEncryptionPage" mnemonicParsing="false" onAction="#textEncryptionPageAction" text="Text encryption" />
+        <MenuItem fx:id="fileEncryptionPage" mnemonicParsing="false" onAction="#fileEncryptionPageAction" text="File encryption" />
         <MenuItem mnemonicParsing="false" onAction="#settingsAction" text="Settings" />
     </Menu>
     <Menu mnemonicParsing="false" text="Options">
-        <MenuItem fx:id="generateKey" mnemonicParsing="false" onAction="#genKeyAction" text="Generate Key"/>
-        <MenuItem fx:id="showKey" mnemonicParsing="false" onAction="#showKeyAction" text="Show key"/>
-        <MenuItem fx:id="setKey" mnemonicParsing="false" onAction="#setKeyAction" text="Set Key"/>
+        <MenuItem fx:id="generateKey" mnemonicParsing="false" onAction="#genKeyAction" text="Generate Key" />
+        <MenuItem fx:id="showKey" mnemonicParsing="false" onAction="#showKeyAction" text="Show key" />
+        <MenuItem fx:id="setKey" mnemonicParsing="false" onAction="#setKeyAction" text="Set Key" />
     </Menu>
     <Menu mnemonicParsing="false" text="Ciphers">
         <RadioMenuItem fx:id="AES128_radio" mnemonicParsing="false" onAction="#AES128_radioAction" text="AES-128" />
