--- a/src/GUI/MenuBar.fxml
+++ b/src/GUI/MenuBar.fxml
@@ -21,7 +21,9 @@
         <RadioMenuItem fx:id="AES128_radio" mnemonicParsing="false" onAction="#AES128_radioAction" text="AES-128" />
         <RadioMenuItem fx:id="AES256_radio" mnemonicParsing="false" onAction="#AES256_radioAction" text="AES-256" />
         <RadioMenuItem fx:id="SimpleCipher_radio" mnemonicParsing="false" onAction="#SimpleCipher_radioAction" text="SimpleCipher" />
+      <RadioMenuItem fx:id="MD2_radio" mnemonicParsing="false" onAction="#MD2_radioAction" text="MD2" />
       <RadioMenuItem fx:id="MD5_radio" mnemonicParsing="false" onAction="#MD5_radioAction" text="MD5" />
+      <RadioMenuItem fx:id="SHA512_radio" mnemonicParsing="false" onAction="#SHA512_radioAction" text="SHA-512" />
     </Menu>
     <Menu mnemonicParsing="false" text="Help">
         <MenuItem fx:id="about" mnemonicParsing="false" onAction="#aboutAction" text="About" />
