--- a/src/GUI/FileEncryptionPage.fxml
+++ b/src/GUI/FileEncryptionPage.fxml
@@ -48,5 +48,6 @@
       </font>
    </Text>
    <Text fx:id="fileOutPath" fill="#2200ff" layoutX="127.0" layoutY="273.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="412.13671875" />
+   <Button layoutX="30.0" layoutY="30.0" mnemonicParsing="false" onAction="#menuButtonAction" text="Button" />
 
 </AnchorPane>
