--- a/src/GUI/HomePage.fxml
+++ b/src/GUI/HomePage.fxml
@@ -5,9 +5,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #00ffbf;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.HomePageController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #000033;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.HomePageController">
 
-    <Text layoutX="137.0" layoutY="125.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome to the SimpleJavaCrypter!" textAlignment="CENTER" wrappingWidth="326.13671875">
+    <Text fill="WHITE" layoutX="137.0" layoutY="125.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome to the SimpleJavaCrypter!" textAlignment="CENTER" wrappingWidth="326.13671875">
         <font>
             <Font name="Tahoma" size="34.0" />
         </font>
@@ -22,6 +22,7 @@
             <Font name="Tahoma Bold" size="12.0" />
         </font>
     </Button>
-    <Text layoutX="198.0" layoutY="391.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Author MasterFlomaster1" textAlignment="CENTER" wrappingWidth="204.13671875" AnchorPane.bottomAnchor="5.0" />
+    <Text fill="WHITE" layoutX="198.0" layoutY="391.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Author MasterFlomaster1" textAlignment="CENTER" wrappingWidth="204.13671875" AnchorPane.bottomAnchor="5.0" />
+   <Button layoutX="30.0" layoutY="30.0" mnemonicParsing="false" onAction="#menuButtonAction" text="Menu" />
 
 </AnchorPane>
