--- a/src/GUI/FileEncryptionPage.fxml
+++ b/src/GUI/FileEncryptionPage.fxml
@@ -8,46 +8,46 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #00ffbf;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.FileEncryptionPageController">
 
-   <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffffffb0" height="61.0" layoutX="38.0" layoutY="150.0" onDragDropped="#handleDragDropped" onDragOver="#handleDragOver" stroke="#d61313" strokeType="INSIDE" width="525.0" />
-   <Text layoutX="236.0" layoutY="68.0" strokeType="OUTSIDE" strokeWidth="0.0" text="File encryption">
+   <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffffffb0" height="61.0" layoutX="39.0" layoutY="126.0" onDragDropped="#handleDragDropped" onDragOver="#handleDragOver" stroke="#d61313" strokeType="INSIDE" width="525.0" />
+   <Text layoutX="232.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" text="File encryption">
       <font>
          <Font name="Tahoma" size="20.0" />
       </font>
    </Text>
-   <Text fx:id="dragNDropText" layoutX="233.0" layoutY="186.0" onDragDropped="#handleDragDropped" onDragOver="#handleDragOver" opacity="0.22" strokeType="OUTSIDE" strokeWidth="0.0" text="Drag'n'Drop AREA">
+   <Text fx:id="dragNDropText" layoutX="233.0" layoutY="162.0" onDragDropped="#handleDragDropped" onDragOver="#handleDragOver" opacity="0.22" strokeType="OUTSIDE" strokeWidth="0.0" text="Drag'n'Drop AREA">
       <font>
          <Font name="System Italic" size="16.0" />
       </font>
    </Text>
-   <Button layoutX="38.0" layoutY="329.0" mnemonicParsing="false" onAction="#encryptButtonAction" prefHeight="25.0" prefWidth="220.0" text="Encrypt" />
-   <Button layoutX="301.0" layoutY="329.0" mnemonicParsing="false" onAction="#decryptButtonAction" prefHeight="25.0" prefWidth="220.0" text="Decrypt" />
-   <Button fx:id="browseInFile" layoutX="49.0" layoutY="168.0" mnemonicParsing="false" onAction="#browseInButtonAction" text="Browse..." />
-   <Text layoutX="38.0" layoutY="102.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Complete following steps to encrypt/decrypt file" wrappingWidth="340.625">
+   <Button layoutX="38.0" layoutY="304.0" mnemonicParsing="false" onAction="#encryptButtonAction" prefHeight="25.0" prefWidth="220.0" text="Encrypt" />
+   <Button layoutX="343.0" layoutY="304.0" mnemonicParsing="false" onAction="#decryptButtonAction" prefHeight="25.0" prefWidth="220.0" text="Decrypt" />
+   <Button fx:id="browseInFile" layoutX="49.0" layoutY="144.0" mnemonicParsing="false" onAction="#browseInButtonAction" text="Browse..." />
+   <Text layoutX="38.0" layoutY="79.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Complete following steps to encrypt/decrypt file" wrappingWidth="340.625">
       <font>
          <Font name="Tahoma" size="16.0" />
       </font>
    </Text>
-   <Text layoutX="38.0" layoutY="139.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1) Choose file to work with">
+   <Text layoutX="38.0" layoutY="106.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1) Choose file to work with">
       <font>
          <Font name="Tahoma" size="15.0" />
       </font>
    </Text>
-   <Text layoutX="38.0" layoutY="237.0" strokeType="OUTSIDE" strokeWidth="0.0" text="2) Select directory to save file">
+   <Text layoutX="38.0" layoutY="215.0" strokeType="OUTSIDE" strokeWidth="0.0" text="2) Select directory to save file">
       <font>
          <Font name="Tahoma" size="15.0" />
       </font>
    </Text>
-   <Button fx:id="browseOutFile" layoutX="49.0" layoutY="256.0" mnemonicParsing="false" onAction="#browseOutButtonAction" text="Browse..." />
-   <Text fx:id="fileInPath" fill="#2200ff" layoutX="137.0" layoutY="184.0" onDragDropped="#handleDragDropped" onDragOver="#handleDragOver" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="412.13671875">
+   <Button fx:id="browseOutFile" layoutX="49.0" layoutY="226.0" mnemonicParsing="false" onAction="#browseOutButtonAction" text="Browse..." />
+   <Text fx:id="fileInPath" fill="#2200ff" layoutX="137.0" layoutY="162.0" onDragDropped="#handleDragDropped" onDragOver="#handleDragOver" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="412.13671875">
       <font>
          <Font name="Tahoma" size="14.0" />
       </font></Text>
-   <Text layoutX="38.0" layoutY="316.0" strokeType="OUTSIDE" strokeWidth="0.0" text="3) Choose operation">
+   <Text layoutX="38.0" layoutY="281.0" strokeType="OUTSIDE" strokeWidth="0.0" text="3) Choose operation">
       <font>
          <Font name="Tahoma" size="15.0" />
       </font>
    </Text>
-   <Text fx:id="fileOutPath" fill="#2200ff" layoutX="127.0" layoutY="273.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="412.13671875" />
-   <Button layoutX="30.0" layoutY="30.0" mnemonicParsing="false" onAction="#menuButtonAction" text="Button" />
+   <Text fx:id="fileOutPath" fill="#2200ff" layoutX="127.0" layoutY="243.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="412.13671875" />
+   <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#menuButtonAction" text="Menu" />
 
 </AnchorPane>
