--- a/src/GUI/HomePage.fxml
+++ b/src/GUI/HomePage.fxml
@@ -5,24 +5,27 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #000033;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.HomePageController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #000033;" stylesheets="@HomePage.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.HomePageController">
 
     <Text fill="WHITE" layoutX="137.0" layoutY="125.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome to the SimpleJavaCrypter!" textAlignment="CENTER" wrappingWidth="326.13671875">
         <font>
             <Font name="Tahoma" size="34.0" />
         </font>
     </Text>
-    <Button fx:id="buttonTextEncryption" layoutX="137.0" layoutY="224.0" mnemonicParsing="false" onAction="#textEncryptionPageAction" prefHeight="25.0" prefWidth="155.0" text="Text encryption">
+    <Button fx:id="buttonTextEncryption" layoutX="137.0" layoutY="224.0" mnemonicParsing="false" onAction="#textEncryptionPageAction" prefHeight="25.0" prefWidth="155.0" text="Text encryption" textFill="WHITE">
         <font>
             <Font name="Tahoma Bold" size="12.0" />
         </font>
     </Button>
-    <Button id="buttonFileEncryption" fx:id="buttonFileEncryption" layoutX="308.0" layoutY="224.0" mnemonicParsing="false" onAction="#fileEncryptionPageAction" prefHeight="25.0" prefWidth="155.0" text="File encryption">
+    <Button id="buttonFileEncryption" fx:id="buttonFileEncryption" layoutX="308.0" layoutY="224.0" mnemonicParsing="false" onAction="#fileEncryptionPageAction" prefHeight="25.0" prefWidth="155.0" text="File encryption" textFill="WHITE">
         <font>
             <Font name="Tahoma Bold" size="12.0" />
         </font>
     </Button>
     <Text fill="WHITE" layoutX="198.0" layoutY="391.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Author MasterFlomaster1" textAlignment="CENTER" wrappingWidth="204.13671875" AnchorPane.bottomAnchor="5.0" />
-   <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#menuButtonAction" text="Menu" />
+   <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#menuButtonAction" text="Menu" textFill="WHITE">
+      <font>
+         <Font name="Tahoma" size="12.0" />
+      </font></Button>
 
 </AnchorPane>
