--- a/src/GUI/SideMenu.css
+++ b/src/GUI/SideMenu.css
@@ -3,18 +3,6 @@
 }
 
 #menu {
-    -fx-background-color: #000066;
+    -fx-background-color: #1a1a1a;
     -fx-spacing: 5;
-}
-
-#menu .button {
-    -fx-border: 5;
-    -fx-pref-height: 25;
-    -fx-pref-width: 150;
-    -fx-background-color: #000033;
-    -fx-border-color: #ffffff;
-}
-
-#menu .button:hover {
-    -fx-background-color: #0000e6;
 }
