--- a/src/GUI/TextEncryptionPage.fxml
+++ b/src/GUI/TextEncryptionPage.fxml
@@ -2,28 +2,33 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #00ffbf;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.TextEncryptionPageController">
+<?import javafx.scene.image.Image?>
+<AnchorPane id="page" prefHeight="375.0" prefWidth="600.0" stylesheets="@General.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.TextEncryptionPageController">
 
-   <TextArea fx:id="inputText" layoutX="50.0" layoutY="100.0" prefHeight="100.0" prefWidth="500.0" />
-   <Text layoutX="231.0" layoutY="66.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text encryption">
+   <TextArea fx:id="inputText" layoutX="50.0" layoutY="72.0" prefHeight="100.0" prefWidth="500.0" />
+   <Text fill="WHITE" layoutX="231.0" layoutY="41.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text encryption">
       <font>
          <Font name="Tahoma" size="20.0" />
       </font>
    </Text>
-   <Button fx:id="encrypt" layoutX="50.0" layoutY="214.0" mnemonicParsing="false" onAction="#encrypt" prefHeight="23.0" prefWidth="220.0" text="Encrypt">
+   <Button fx:id="encrypt" layoutX="50.0" layoutY="188.0" mnemonicParsing="false" onAction="#encrypt" prefHeight="23.0" prefWidth="220.0" text="Encrypt">
       <font>
          <Font name="Tahoma" size="12.0" />
       </font>
    </Button>
-   <Button fx:id="decrypt" layoutX="330.0" layoutY="214.0" mnemonicParsing="false" onAction="#decrypt" prefHeight="23.0" prefWidth="220.0" text="Decrypt">
+   <Button fx:id="decrypt" layoutX="400.0" layoutY="188.0" mnemonicParsing="false" onAction="#decrypt" prefHeight="23.0" prefWidth="220.0" text="Decrypt">
       <font>
          <Font name="Tahoma" size="12.0" />
       </font>
    </Button>
-   <TextArea fx:id="outputText" layoutX="50.0" layoutY="252.0" prefHeight="100.0" prefWidth="500.0" />
+   <TextArea fx:id="outputText" layoutX="50.0" layoutY="230.0" prefHeight="100.0" prefWidth="500.0" />
+   <ImageView fx:id="menuImage" fitHeight="40.0" fitWidth="40.0" layoutX="14.0" layoutY="14.0" onMouseEntered="#mouseEntered" onMouseExited="#menuButtonRelease" onMousePressed="#menuButtonPressed" onMouseReleased="#menuButtonPressed" pickOnBounds="true" preserveRatio="true" >
+      <Image url="/menu1.png"/>
+   </ImageView>
 
 </AnchorPane>
