--- a/src/GUI/FileEncryptionPage.fxml
+++ b/src/GUI/FileEncryptionPage.fxml
@@ -7,7 +7,6 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<?import javafx.scene.image.Image?>
 <AnchorPane id="page" prefHeight="375.0" prefWidth="600.0" stylesheets="@General.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.FileEncryptionPageController">
 
    <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1a1a1a" height="61.0" layoutX="38.0" layoutY="93.0" onDragDropped="#handleDragDropped" onDragOver="#handleDragOver" stroke="#009900" strokeType="INSIDE" width="525.0" />
@@ -16,7 +15,7 @@
          <Font name="Tahoma" size="20.0" />
       </font>
    </Text>
-   <Text fx:id="dragNDropText" layoutX="237.0" layoutY="129.0" onDragDropped="#handleDragDropped" onDragOver="#handleDragOver" opacity="0.22" strokeType="OUTSIDE" strokeWidth="0.0" text="Drag'n'Drop AREA">
+   <Text fx:id="dragNDropText" fill="#009900" layoutX="237.0" layoutY="129.0" onDragDropped="#handleDragDropped" onDragOver="#handleDragOver" opacity="0.22" strokeType="OUTSIDE" strokeWidth="0.0" text="Drag'n'Drop AREA">
       <font>
          <Font name="System Italic" size="16.0" />
       </font>
@@ -35,7 +34,7 @@
       </font>
    </Text>
    <Button id="browse" fx:id="browseOutFile" layoutX="49.0" layoutY="203.0" mnemonicParsing="false" onAction="#browseOutButtonAction" text="Browse..." />
-   <Text fx:id="fileInPath" fill="#2200ff" layoutX="111.0" layoutY="129.0" onDragDropped="#handleDragDropped" onDragOver="#handleDragOver" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="412.13671875">
+   <Text fx:id="fileInPath" fill="#2200ff" layoutX="127.0" layoutY="127.0" onDragDropped="#handleDragDropped" onDragOver="#handleDragOver" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="412.13671875">
       <font>
          <Font name="Tahoma" size="14.0" />
       </font></Text>
@@ -44,9 +43,9 @@
          <Font name="Tahoma" size="15.0" />
       </font>
    </Text>
-   <Text fx:id="fileOutPath" fill="#2200ff" layoutX="111.0" layoutY="220.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="412.13671875" />
+   <Text fx:id="fileOutPath" fill="#2200ff" layoutX="127.0" layoutY="220.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="412.13671875" />
    <ImageView fx:id="menuImage" fitHeight="40.0" fitWidth="40.0" layoutX="14.0" layoutY="14.0" onMouseEntered="#mouseEntered" onMouseExited="#menuButtonRelease" onMousePressed="#menuButtonPressed" onMouseReleased="#menuButtonRelease" pickOnBounds="true" preserveRatio="true">
-      <Image url="/menu1.png"/>
+<!--      <Image url="/menu1.png"/>-->
    </ImageView>
 
 </AnchorPane>
