--- a/src/GUI/TextEncryptionPage.fxml
+++ b/src/GUI/TextEncryptionPage.fxml
@@ -7,10 +7,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<?import javafx.scene.image.Image?>
 <AnchorPane id="page" prefHeight="375.0" prefWidth="600.0" stylesheets="@General.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.TextEncryptionPageController">
 
-   <TextArea fx:id="inputText" layoutX="50.0" layoutY="72.0" prefHeight="100.0" prefWidth="500.0" />
+   <TextArea fx:id="inputText" layoutX="50.0" layoutY="72.0" prefHeight="100.0" prefWidth="500.0" wrapText="true" />
    <Text fill="WHITE" layoutX="231.0" layoutY="41.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text encryption">
       <font>
          <Font name="Tahoma" size="20.0" />
@@ -26,9 +25,9 @@
          <Font name="Tahoma" size="12.0" />
       </font>
    </Button>
-   <TextArea fx:id="outputText" layoutX="50.0" layoutY="230.0" prefHeight="100.0" prefWidth="500.0" />
-   <ImageView fx:id="menuImage" fitHeight="40.0" fitWidth="40.0" layoutX="14.0" layoutY="14.0" onMouseEntered="#mouseEntered" onMouseExited="#menuButtonRelease" onMousePressed="#menuButtonPressed" onMouseReleased="#menuButtonPressed" pickOnBounds="true" preserveRatio="true" >
-      <Image url="/menu1.png"/>
+   <TextArea fx:id="outputText" layoutX="50.0" layoutY="230.0" prefHeight="100.0" prefWidth="500.0" wrapText="true" />
+   <ImageView fx:id="menuImage" fitHeight="40.0" fitWidth="40.0" layoutX="14.0" layoutY="14.0" onMouseEntered="#mouseEntered" onMouseExited="#menuButtonRelease" onMousePressed="#menuButtonPressed" onMouseReleased="#menuButtonPressed" pickOnBounds="true" preserveRatio="true">
+<!--      <Image url="/menu1.png"/>-->
    </ImageView>
 
 </AnchorPane>
