GUI updates + bug fixing

--- a/src/GUI/TextEncryptionPage.fxml
+++ b/src/GUI/TextEncryptionPage.fxml
@@ -4,30 +4,45 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
+<?import javafx.scene.image.Image?>
 
 <AnchorPane id="page" prefHeight="375.0" prefWidth="600.0" stylesheets="@General.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.TextEncryptionPageController">
-
-   <TextArea fx:id="inputText" layoutX="50.0" layoutY="72.0" prefHeight="100.0" prefWidth="500.0" wrapText="true" />
+   <ImageView fx:id="menuImage" fitHeight="40.0" fitWidth="40.0" layoutX="14.0" layoutY="14.0" onMouseEntered="#mouseEntered" onMouseExited="#menuButtonRelease" onMousePressed="#menuButtonPressed" onMouseReleased="#menuButtonPressed" pickOnBounds="true" preserveRatio="true">
+      <Image url="/menu1.png"/>
+   </ImageView>
    <Text fill="WHITE" layoutX="231.0" layoutY="41.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text encryption">
       <font>
          <Font name="Tahoma" size="20.0" />
       </font>
    </Text>
-   <Button fx:id="encrypt" layoutX="50.0" layoutY="188.0" mnemonicParsing="false" onAction="#encrypt" prefHeight="23.0" prefWidth="220.0" text="Encrypt">
-      <font>
-         <Font name="Tahoma" size="12.0" />
-      </font>
-   </Button>
-   <Button fx:id="decrypt" layoutX="400.0" layoutY="188.0" mnemonicParsing="false" onAction="#decrypt" prefHeight="23.0" prefWidth="220.0" text="Decrypt">
-      <font>
-         <Font name="Tahoma" size="12.0" />
-      </font>
-   </Button>
-   <TextArea fx:id="outputText" layoutX="50.0" layoutY="230.0" prefHeight="100.0" prefWidth="500.0" wrapText="true" />
-   <ImageView fx:id="menuImage" fitHeight="40.0" fitWidth="40.0" layoutX="14.0" layoutY="14.0" onMouseEntered="#mouseEntered" onMouseExited="#menuButtonRelease" onMousePressed="#menuButtonPressed" onMouseReleased="#menuButtonPressed" pickOnBounds="true" preserveRatio="true">
-<!--      <Image url="/menu1.png"/>-->
-   </ImageView>
+   <VBox alignment="CENTER" layoutY="61.0" prefHeight="300.0" prefWidth="600.0" spacing="20.0">
+      <children>
+
+         <TextArea fx:id="inputText" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="100.0" prefWidth="500.0" wrapText="true" />
+         <HBox alignment="CENTER" prefHeight="26.0" prefWidth="600.0" spacing="200.0">
+            <children>
+               <Button fx:id="encrypt" mnemonicParsing="false" onAction="#encrypt" prefHeight="23.0" prefWidth="220.0" text="Encrypt">
+                  <font>
+                     <Font name="Tahoma" size="12.0" />
+                  </font>
+               </Button>
+               <Button fx:id="decrypt" mnemonicParsing="false" onAction="#decrypt" prefHeight="23.0" prefWidth="220.0" text="Decrypt">
+                  <font>
+                     <Font name="Tahoma" size="12.0" />
+                  </font>
+               </Button>
+            </children>
+         </HBox>
+         <TextArea fx:id="outputText" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="100.0" prefWidth="500.0" wrapText="true">
+            <font>
+               <Font name="Tahoma" size="12.0" />
+            </font>
+         </TextArea>
+      </children>
+   </VBox>
 
 </AnchorPane>
