--- a/src/GUI/TextHashPage.fxml
+++ b/src/GUI/TextHashPage.fxml
@@ -1,10 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="GUI.TextHashPageController"
-            prefHeight="375.0" prefWidth="600.0">
-
+<?import javafx.scene.image.Image?>
+<AnchorPane id="page" prefHeight="375.0" prefWidth="600.0" stylesheets="@General.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.TextHashPageController">
+    <ImageView fx:id="menuImage" fitHeight="40.0" fitWidth="40.0" layoutX="14.0" layoutY="14.0" onMouseEntered="#mouseEntered" onMouseExited="#menuButtonRelease" onMousePressed="#menuButtonPressed" onMouseReleased="#menuButtonRelease" pickOnBounds="true" preserveRatio="true">
+        <Image url="/menu1.png" />
+    </ImageView>
+    <Text fill="WHITE" layoutX="257.0" layoutY="41.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text hash">
+        <font>
+          <Font name="Tahoma" size="20.0" />
+        </font>
+    </Text>
+    <VBox alignment="CENTER" layoutY="68.0" prefHeight="301.0" prefWidth="600.0" spacing="20.0">
+        <TextArea fx:id="inputText" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="500.0" wrapText="true">
+         <font>
+            <Font name="Tahoma" size="12.0" />
+         </font></TextArea>
+        <Button mnemonicParsing="false" onAction="#hashButtonAction" text="HASH" />
+        <TextArea fx:id="outputText" layoutX="60.0" layoutY="144.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="500.0" wrapText="true" />
+    </VBox>
 </AnchorPane>
